--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <!-- MARK: SIDEBAR -->
       <div
         :class="{'w-72': sideBar, 'w-16': !sideBar}"
-        class="flex flex-col bg-vlp transition-all duration-500 dark:bg-vdp"
+        class="flex flex-col transition-all duration-500 border-0 border-r border-vls/40 dark:border-vds3neu700 bg-vlp dark:bg-vdp"
         x-ref="mainSidebar"
         x-transition:enter="transition-all ease-in-out duration-500"
         x-transition:enter-start="w-16"
@@ -26,33 +26,39 @@
         x-transition:leave-start="w-72"
         x-transition:leave-end="w-16">
         <!-- MARK:ROW-1-ContentButtons -->
-        <div class="flex flex-col gap-4 items-center justify-start">
+        <div class="flex flex-col items-center justify-start gap-4">
           <!-- CLIENTS -->
           <button
             @click="tabButtonClicked('clients')"
             :class="{ 'tab-button-active': tabContentActive('clients') }"
-            class="tab-button flex items-center">
+            class="flex items-center tab-button">
             <div x-show="sideBar" class="flex items-center p-2">
-              <svg class="w-8 h-8 text-green-500">
-                <use href="#user-group"></use>
+              <svg width="24" height="24" class="mr-1.5">
+                <use href="/public/icons/icons.svg#user-group" />
               </svg>
               <span>Clients</span>
             </div>
             <div x-show="!sideBar" class="p-2">
-              <object data-feather="users"></object>
+              <svg width="28" height="28" class="mr-1.5">
+                <use href="/public/icons/icons.svg#user-group" />
+              </svg>
             </div>
           </button>
           <!-- INVOICES -->
           <button
             @click="tabButtonClicked('invoices')"
             :class="{ 'tab-button-active': tabContentActive('invoices') }"
-            class="tab-button flex items-center">
+            class="flex items-center tab-button">
             <div x-show="sideBar" class="flex items-center p-2">
-              <object data-feather="file-text" class="mr-1.5 w-4"></object>
+              <svg width="24" height="24" class="mr-1.5">
+                <use href="/public/icons/icons.svg#pound-text" />
+              </svg>
               <span x-show="sideBar">Invoices</span>
             </div>
             <div x-show="!sideBar" class="p-2">
-              <object data-feather="file-text"></object>
+              <svg width="28" height="28">
+                <use href="/public/icons/icons.svg#pound-text" />
+              </svg>
             </div>
           </button>
           <!-- EDITOR -->
@@ -61,34 +67,51 @@
             :class="{ 'tab-button-active': tabContentActive('editor') }"
             class="tab-button">
             <div x-show="sideBar" class="flex items-center p-2">
-              <object data-feather="edit" class="mr-1.5 w-4"></object>
+              <svg width="24" height="24" class="mr-1.5">
+                <use href="/public/icons/icons.svg#editor" />
+              </svg>
               <span x-show="sideBar">Editor</span>
             </div>
             <div x-show="!sideBar" class="p-2">
-              <object data-feather="edit"></object>
+              <svg width="28" height="28">
+                <use href="/public/icons/icons.svg#editor" />
+              </svg>
             </div>
           </button>
         </div>
         <!-- MARK:ROW-2--ITEMS-->
-        <div x-data="itemEditor" class="flex h-full flex-col items-center justify-center">
+        <div x-data="itemEditor" class="flex flex-col items-center justify-center h-full">
           <div x-html="htmlSlideOver"></div>
         </div>
         <!-- MARK:ROW-3-->
-        <div class="flex flex-col items-center justify-end self-end mt-auto mb-4 w-full">
+        <div class="flex flex-col items-center self-end justify-end w-full mt-auto mb-4">
           <!-- colorTheme-->
-          <button @click="Alpine.store('colorTheme').toggleTheme()" title="Toggle theme" class="tab-button p-2">
-            <object x-show="Alpine.store('colorTheme').darkTheme" data-feather="moon" class="w-6"></object>
-            <object x-show="!Alpine.store('colorTheme').darkTheme" data-feather="sun" class="w-6"></object>
+          <button
+            @click="Alpine.store('colorTheme').toggleTheme()"
+            title="Toggle theme"
+            class="p-2 transition-all tab-button"
+            x-transition>
+            <svg x-show="Alpine.store('colorTheme').darkTheme" width="28" height="28">
+              <use href="/public/icons/icons.svg#moon" />
+            </svg>
+            <svg x-show="!Alpine.store('colorTheme').darkTheme" width="28" height="28">
+              <use href="/public/icons/icons.svg#sun" />
+            </svg>
           </button>
 
           <!-- Sidebar Button -->
-          <button :title="sideBar ? 'Close Sidebar' : 'Open Sidebar'" @click="sideBarOpen()" class="tab-button p-2">
-            <object data-feather="sidebar"></object>
+          <button :title="sideBar ? 'Close Sidebar' : 'Open Sidebar'" @click="sideBarOpen()" class="p-2 tab-button">
+            <svg x-show="sideBar" width="28" height="28">
+              <use href="/public/icons/icons.svg#chev-left" />
+            </svg>
+            <svg x-show="!sideBar" width="28" height="28">
+              <use href="/public/icons/icons.svg#chev-right" />
+            </svg>
           </button>
         </div>
       </div>
       <!--MARK: VIEWS -->
-      <div class="flex w-full flex-col overflow-auto bg-vlp3 p-6 will-change-auto dark:bg-vdp2">
+      <div class="flex flex-col w-full p-6 overflow-auto bg-[#fafafa] will-change-auto dark:bg-vdp2">
         <div
           x-ref="tabContentContainer"
           x-show="!isLoading"
@@ -107,38 +130,34 @@
           <div
             x-show="$store.clientStore.showClientModal"
             x-transition.opacity.duration.300ms
-            class="z-[99] w-full h-full place-self-center">
+            class="fixed inset-0 z-[99] flex items-center justify-center bg-black bg-opacity-50"
+            style="pointer-events: auto">
             <!-- Clients Modal Body -->
-            <div
-              class="inner-modal-size-positioning-relative modal-bg-and-borders"
-              @keydown.escape.window="$store.clientStore.showClientModal = false">
-              <div class="p-6">
-                <h2 class="modal-title !text-md mb-4">Select Client</h2>
-                <div class="relative">
-                  <button
-                    x-ref="clientModalButton"
-                    @click="$store.clientStore.showDropdown = !$store.clientStore.showDropdown"
-                    :class="{ 'mb-4 w-full rounded-md inner-modal-dropdown-open': $store.clientStore.showDropdown, 'justify-center modal-dropdown flex': !$store.clientStore.showDropdown }">
-                    Clients
-                    <object data-feather="chevron-down" class="ml-2 flex h-4 w-4 items-end self-center"></object>
-                  </button>
-                  <div
-                    x-anchor.offset.5="$refs.clientModalButton"
-                    x-show="$store.clientStore.showDropdown"
-                    x-collapse.duration.500ms
-                    class="table-scrollbar modal-dropdown max-h-80 w-full overflow-auto bg-vlp dark:bg-vds2">
-                    <ul>
-                      <template x-for="client in $store.clientStore.clients" :key="client.id">
-                        <li
-                          @click="$store.clientStore.selectClient(client)"
-                          class="dark:bg-vd cursor-pointer rounded-md p-2 text-left text-vls hover:text-vls2 dark:text-vds3light dark:hover:bg-vdp3 dark:hover:text-vds"
-                          x-text="client.name"></li>
-                      </template>
-                    </ul>
-                  </div>
-                </div>
-                <div class="flex items-center justify-center">
-                  <button @click="$store.clientStore.showClientModal = false" class="modal-btn-sec">Close</button>
+            <div class="relative p-6 bg-white rounded-lg shadow-lg w-80 dark:bg-vdp modal-bg-and-borders">
+              <h2 class="modal-title !text-md mb-4 w-full text-center">Select Client</h2>
+              <div class="relative">
+                <button
+                  x-ref="clientModalButton"
+                  @click="$store.clientStore.showDropdown = !$store.clientStore.showDropdown"
+                  :class="{ 'mb-4 w-full rounded-md inner-modal-dropdown-open': $store.clientStore.showDropdown, 'justify-center modal-dropdown flex': !$store.clientStore.showDropdown }">
+                  Clients
+                  <svg width="18" height="18" class="flex self-center ml-2 mt-0.5">
+                    <use href="/public/icons/icons.svg#chev-down" />
+                  </svg>
+                </button>
+                <div
+                  x-anchor.offset.5="$refs.clientModalButton"
+                  x-show="$store.clientStore.showDropdown"
+                  x-collapse.duration.500ms
+                  class="w-full overflow-auto table-scrollbar modal-dropdown max-h-80 bg-vlp dark:bg-vds2">
+                  <ul>
+                    <template x-for="client in $store.clientStore.clients" :key="client.id">
+                      <li
+                        @click="$store.clientStore.selectClient(client)"
+                        class="p-1 text-left rounded-md cursor-pointer dark:bg-vd text-vds hover:text-vls2 dark:text-vds3light dark:hover:bg-vdp3 dark:hover:text-vds"
+                        x-text="client.name"></li>
+                    </template>
+                  </ul>
                 </div>
               </div>
             </div>
