--- a/src/index.html
+++ b/src/index.html
@@ -182,6 +182,7 @@
     <script type="module" src="store/fetcHtml.js"></script>
     <script type="module" src="./app.js" defer></script>
     <!--  Alpine Plugins  -->
+    <script src="/public/alpinejs/plugins/mask.js" defer></script>
     <script src="/public/alpinejs/plugins/alpine-morph.js" defer></script>
     <script src="./alpinejs/plugins/anchor.js" defer></script>
     <script src="./alpinejs/plugins/persist.js" defer></script>
@@ -190,6 +191,6 @@
     <script>
       console.log('##----------------------->Alpine to begin loading (index.html)<-----------------------##')
     </script>
-    <script src="./alpinejs/dist/cdn.min.js" defer></script>
+    <script src="./alpinejs/dist/alpine.js" defer></script>
   </body>
 </html>
