--- a/public/html/clients.html
+++ b/public/html/clients.html
@@ -23,8 +23,11 @@
         <span class="flex self-center">Add Client</span>
       </button>
     </div>
+    <div>
+      <button class="bg-vda2 border p-2 rounded-md" @click="$store.clients.add()">increase test value</button>
+      <button class="bg-blue-500 border p-2 rounded-md" @click="$store.clients.subtract()">increase test value</button>
+    </div>
     <!-- Clients Table -->
-
     <table class="w-full border-separate text-vls" style="border-spacing: 0 10px">
       <thead class="table-head-style">
         <tr>
